Fix alignment of titles under bar chart in http popup

--- a/_temp/hud/src/index.scss
+++ b/_temp/hud/src/index.scss
@@ -368,10 +368,11 @@
     margin-top:15px;
 }
 .glimpse .glimpse-hud .glimpse-data-wire-part {
-    width:35%;
+    width:33%;
 }
 .glimpse .glimpse-hud .glimpse-data-server-part {
-    width:30%
+    width:34%;
+    text-align: center;
 }
 .glimpse .glimpse-hud .glimpse-data-client-part {
     text-align:right;
